--- a/deployments/docker-compose.kratos-oathkeeper.yml
+++ b/deployments/docker-compose.kratos-oathkeeper.yml
@@ -11,6 +11,19 @@ services:
       - POSTGRES_DB=kratos
     networks:
       - intranet
+  
+  pgadmin:
+    image: dpage/pgadmin4
+    links:
+      - postgres-kratos:postgres-kratos
+    ports:
+      - "5050:80"
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=google@gmail.com
+      - PGADMIN_DEFAULT_PASSWORD=changeme
+      - PGADMIN_CONFIG_SERVER_MODE=False
+    networks:
+      - intranet
 
   kratos-migrate:
     image: oryd/kratos:v1.2.0
